actualizacion de Nautica y Todos a bordo

--- a/medios-programas.html
+++ b/medios-programas.html
@@ -12,7 +12,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=20250506">
     <title>Náutico Charigue - Medios</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,6 +59,10 @@
 
         <div class="separator"></div>
         <div class="video-grid">      
+            <div class="video-item">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/QvzXcwctgv8" title="Todos a bordo TV Programa Nro.: 549   04/06/25" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+               <p class="video-title">Todos a bordo TV Programa Nro.: 549 (04/06/25)</p>
+            </div>  
              <div class="video-item">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/d014tdwbOjg" title="Todos a bordo TV Programa Nro.: 548   28/05/25" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p class="video-title">Todos a bordo TV Programa Nro.: 548 (28/05/25)</p>
