--- a/medios-nautica.html
+++ b/medios-nautica.html
@@ -12,7 +12,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=20250506">
     <title>Náutico Charigue - Medios</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,11 +56,16 @@
 
 <div class="container">
     <h1 class="encabezados">Revista Náutica Mensual</h1>
-
+    <div class="revista-nautica">
+        <iframe src="NAUTICA 2-1_merged.pdf" width="100%" height="600px"></iframe>
+        <p><a href="NAUTICA 2-1_merged.pdf" target="_blank">Descargar la Revista Náutica - Junio 2025 (PDF)</a></p>
+    </div>
+</br>
     <div class="revista-nautica">
         <iframe src="NAUTICA 1-1_merged.pdf" width="100%" height="600px"></iframe>
         <p><a href="NAUTICA 1-1_merged.pdf" target="_blank">Descargar la Revista Náutica - Mayo 2025 (PDF)</a></p>
     </div>
+
 
 </div>
 <div class="separator"></div>
